--- a/tindog1.html
+++ b/tindog1.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,9 +22,8 @@
         background-color: #ff4c68;
         color: #fff;
      }
-     .container-fluid{
-        padding: 3% 15% 7%;
-     }
+  
+
      h1{
 
         font-family: "merriweather";
@@ -290,8 +290,9 @@ h3{
     </div>
 </section>
 <!--carsouals-->
-
+<body class="container-fluid">
 <div class="carousel slide carousel-dark"id="banner"data-bs-ride="carousel">
+
     <div class="carousel-inner">
         <div class="carousel-item active"data-bs-interval="1500">
             <img class="anand" src=".\images\30.jpg"class="w-100 d-block">
@@ -352,6 +353,7 @@ h3{
 
     </div>
 </div>
+
 <!--pricing-->
 <section id="pricing">
     <h2>Plan for every dogs needs</h2>
@@ -432,4 +434,6 @@ h3{
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
+    
+
 
