--- a/tindog1.html
+++ b/tindog1.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,8 +21,10 @@
         background-color: #ff4c68;
         color: #fff;
      }
-  
-
+     .container-fluid{
+   
+        padding: 3% 15% 7%;
+     }
      h1{
 
         font-family: "merriweather";
@@ -199,7 +200,7 @@ h3{
      }
     </style>
 </head>
-<body>
+<body class="container-fluid">
 
     <section id="title">
         <div class="container-fluid">
@@ -290,9 +291,8 @@ h3{
     </div>
 </section>
 <!--carsouals-->
-<body class="container-fluid">
-<div class="carousel slide carousel-dark"id="banner"data-bs-ride="carousel">
 
+<div class="carousel slide carousel-dark"id="banner"data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active"data-bs-interval="1500">
             <img class="anand" src=".\images\30.jpg"class="w-100 d-block">
@@ -353,7 +353,6 @@ h3{
 
     </div>
 </div>
-
 <!--pricing-->
 <section id="pricing">
     <h2>Plan for every dogs needs</h2>
@@ -435,5 +434,3 @@ h3{
 </body>
 </html>
     
-
-
